tests/potentially_unhandled.coop.ref
Type warning at file "./potentially_unhandled.coop", line 4, charaters 8-39:
the following operations are potentially unhandled: tickle

Type warning at file "./potentially_unhandled.coop", line 6, charaters 8-40:
the following exceptions are potentially unhandled: giggle

Type warning at file "./potentially_unhandled.coop", line 8, charaters 8-54:
the following operations are potentially unhandled: tickle

Type warning at file "./potentially_unhandled.coop", line 8, charaters 8-54:
the following exceptions are potentially unhandled: giggle

Type error at file "./potentially_unhandled.coop", line 11, charaters 2-112:
the following exceptions are potentially unhandled: giggle

