tests/potentially_unhandled.coop
operation tickle : unit -> unit
exception giggle of unit

let a = if false then tickle () else ()

let b = if false then !giggle () else ()

let c = if false then (!giggle () ; tickle ()) else ()

let d =
  using ({} @ unit) @ () run
    if false then !giggle () else tickle ()
  with {
  | return _ @ _ -> ()
  }